added implementation HU-4 and unit tests
