# src/main/java/com/pragma/restaurants/infrastructure/input/rest/DishController.java
@@ -2,6 +2,7 @@ package com.pragma.restaurants.infrastructure.input.rest;
 
 import com.pragma.restaurants.application.dto.DishRequest;
 import com.pragma.restaurants.application.dto.DishResponse;
+import com.pragma.restaurants.application.dto.DishUpdateRequest;
 import com.pragma.restaurants.application.handler.IDishHandler;
 import com.pragma.restaurants.infrastructure.adapter.in.rest.api.DishesApi;
 import lombok.RequiredArgsConstructor;
@@ -17,6 +18,12 @@ public class DishController implements DishesApi {
     @Override
     public ResponseEntity<DishResponse> createDish(DishRequest dishRequest) {
         DishResponse dishResponse = dishHandler.createDish(dishRequest);
+        return ResponseEntity.ok(dishResponse);
+    }
+
+    @Override
+    public ResponseEntity<DishResponse> updateDish(Long dishId, DishUpdateRequest dishUpdateRequest) {
+        DishResponse dishResponse = dishHandler.updateDish(dishId, dishUpdateRequest);
         return ResponseEntity.ok(dishResponse);
     }
 }
